--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <link rel="stylesheet" href="styles/new.css">
 </head>
 <body>
-    <header class="head1">
-        <h3>Happy New Year</h3>
+    <header>
+        <div class="div1">
+            <h3 class="headertitle">Happy New Year</h3>
+            <h1 class="title1">NEW YEAR PARTY CELEBRATION</h1>
+        </div>
     </header>
+    <main>
+        <section class="sec1">
+            <div class="div2">
+                <h1 class="percent">65% OFF</h1>
+                <H4 class="holiday">OUR HOLIDAY DEALS ARE BETTER</H4>
+                <H2 class="cat">ALL CATEGORIES</H2>
+            </div>
+            <img width="600px" src="image/New Year Photo.png" alt="">
+        </section>
+        <section class="sec2">
+            <div>
+                <h2 class="head2">Welcome to Midnight Party</h2>
+                <p class="para2">A midnight party, a clandestine affair shrouded in darkness, promises an exhilarating escape from the ordinary. As the clock strikes twelve, the world outside slumbers, while within the confines of the party, a vibrant energy pulsates.</p>
+                <button class="btn1">Join Now</button>
+            </div>
+            <img class="img1" src="image/Group 70.png" alt="">
+        </section>
+    </main>
     
 </body>
 </html>
