--- a/index.html
+++ b/index.html
@@ -30,6 +30,54 @@
             </div>
             <img class="img1" src="image/Group 70.png" alt="">
         </section>
+        <section class="sec3">
+            <h3 class="head3"> <span class="span1">Place:</span> New Park Hotel</h3>
+            <h3 class="head3"> <span class="span1">Date:</span> 31 December, 2024</h3>
+            <h3 class="head3"> <span class="span1">Time:</span> 7.30pm to 12.30pm</h3>
+            <button class="btn3">Join Now</button>
+        </section>
+        <section class="sec4">
+            <nav class="nav1">
+                <div class="div3">
+                    <h4 class="head4">NEW BEST OFFER</h4>
+                    <H2 class="title3">Coming Soon</H2>
+                    <p class="para3">Image quality: Reducing the image size may affect its quality. Use image optimization tools to compress the image without significantly impacting its appearance.</p>
+                </div>
+                <div class="div4">
+                    <img class="img3" width="400px" src="image/img-12.png" alt="">
+                </div>
+                <div class="div5">
+                    <h2 class="head5">2024</h2>
+                    <p class="para4">Consider using responsive design techniques to ensure images scale appropriately on different screen sizes.</p>
+                </div>
+            </nav>
+            <div class="div6">
+                <img class="img4" src="image/Group 96.png" alt="">
+            </div>
+        </section>
+        <section class="sec5">
+            <Nav>
+                <div class="div7">
+                    <h4 class="head6">WHAT IS FUNCTIONAL</h4>
+                    <H1 class="title5"><span class="span3">Holidays</span>  Sale 50%</H1>
+                    <p class="para6">The air is thick with anticipation, the music thumps with infectious rhythm, and laughter echoes through the night. The dimly lit room is a canvas of revelry, where strangers become friends and inhibitions melt away. It's a moment to let loose, to dance without restraint, and to embrace the fleeting magic of the night.</p>
+                </div>
+            </Nav>
+            <nav class="nav3">
+                <div>
+                    <img class="img5" src="image/Group 75.png" alt="">
+                </div>
+                <div>
+                    <img class="img6" src="image/Rectangle 1.png" alt="">
+                </div>
+                <div>
+                    <img class="img7" src="image/Group 44.png" alt="">
+                </div>
+                <div>
+                    <img class="img8" src="image/Rectangle 2.png" alt="">
+                </div>
+            </nav>
+        </section>
     </main>
     
 </body>
