--- a/index.html
+++ b/index.html
@@ -78,7 +78,40 @@
                 </div>
             </nav>
         </section>
+        <section class="sec6">
+            <nav>
+                <div class="div9">
+                    <h5 class="head7">THE BEST GIFTS</h5>
+                    <H2 class="title6">Our Awesome Portfolio</H2>
+                    <p class="para7">A midnight party, a clandestine affair shrouded in darkness, promises an exhilarating escape from the ordinary. As the clock strikes twelve, the world outside slumbers, while within the confines of the party, a vibrant energy pulsates.</p>
+                </div>
+                <div class="div8">
+                    <img width="300px" src="image/Rectangle 3.png" alt="">
+                    <img width="300px" src="image/Rectangle 4.png" alt="">
+                    <img width="300px" src="image/Rectangle 5.png" alt="">
+                    <img width="300px" src="image/Rectangle 6.png" alt="">
+                    <img width="300px" src="image/Rectangle 7.png" alt="">
+                    <img width="300px" src="image/Rectangle 8.png" alt="">
+                </div>
+            </nav>
+        </section>
     </main>
+    <footer>
+        <nav class="nav5">
+            <div class="div10">
+                <img width="100px" class="img9" src="image/Group 61.png" alt="">
+            </div>
+            <div class="div11">
+                <h2 class="head8">Subscribe Newsletter</h2>
+                <p class="para8">The air is thick with anticipation, the music thumps with infectious rhythm, and laughter echoes through the night. The dimly lit room is a canvas of revelry.</p>
+            </div>
+            <div class="div14">
+                <input class="input1" type="email" placeholder="youser@gmail.com">
+                <button class="btn9">Subscribe</button>
+            </div>
+
+        </nav>
+    </footer>
     
 </body>
 </html>
